# Laboratory_19

./: CMakeLists.txt  main.c
libs/algorithms/: algorithms.c  algorithms.h
libs/athlete/: athlete.c  athlete.h
libs/files/: files.h
libs/matrix/: matrix.c  matrix.h
libs/order/: order.h
libs/polynomial/: polynomial.c  polynomial.h
libs/product/: product.h
libs/string/: string.c  string.h
libs/tasks/: tasks.c  tasks.h
libs/test/: test.c  test.h
libs/vector/: vector.c  vector.h
